// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createContainer() Max and min 1`] = `
<div
  class="ql-wordcount ql-toolbar ql-snow"
  style="margin-top: -1px; font-size: 85%;"
>
  <i
    class="ql-wordcount-min"
    style="opacity: 0.5; margin-right: 10px;"
  >
    Min: 1
  </i>
  <i
    class="ql-wordcount-max"
    style="opacity: 0.5; margin-right: 10px;"
  >
    Max: 2
  </i>
</div>
`;

exports[`createContainer() Max and no min 1`] = `
<div
  class="ql-wordcount ql-toolbar ql-snow"
  style="margin-top: -1px; font-size: 85%;"
>
  <i
    class="ql-wordcount-max"
    style="opacity: 0.5; margin-right: 10px;"
  >
    Max: 1,000
  </i>
</div>
`;

exports[`createContainer() Min and no max 1`] = `
<div
  class="ql-wordcount ql-toolbar ql-snow"
  style="margin-top: -1px; font-size: 85%;"
>
  <i
    class="ql-wordcount-min"
    style="opacity: 0.5; margin-right: 10px;"
  >
    Min: 5
  </i>
</div>
`;

exports[`createContainer() No min and no max 1`] = `
<div
  class="ql-wordcount ql-toolbar ql-snow"
  style="margin-top: -1px; font-size: 85%;"
/>
`;
